# localtrans

./: .gitignore  README.md  pyproject.toml
localtrans/: configuration.py  translator.py
localtrans/models/: exceptions.py  pytranslator.py
tests/: conftest.py
tests/translator/: conftest.py  test_add_lang.py  test_delete_lang.py  test_to_json.py  test_translate.py  test_translator_with_initialize.py  test_translator_with_single_file.py
