[tool.poetry]
name = "localtrans"
version = "0.1.2"
description = ""
authors = ["Oğuz Yeşil <oguzyesil17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
pydantic = "^2.8.2"
faker = "^26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
